mypy/test/data/check-functions.test
-- Test cases for the type checker related to functions, function types and
-- calls.

-- See also check-varargs.test.


-- Function type basics
-- --------------------


[case testCallingVariableWithFunctionType]
from typing import Undefined, Function
f = Undefined # type: Function[[A], B]
a, b = Undefined, Undefined # type: (A, B)
a = f(a)    # E: Incompatible types in assignment (expression has type "B", variable has type "A")
b = f(b)    # E: Argument 1 has incompatible type "B"; expected "A"
b = f()     # E: Too few arguments
b = f(a, a) # E: Too many arguments
b = f(a)

class A: pass
class B: pass

[case testSubtypingFunctionTypes]
from typing import Undefined, Function
f = Undefined # type: Function[[B], A]
g = Undefined # type: Function[[A], A]
h = Undefined # type: Function[[B], B]  # subtype of f
g = f  # E: Incompatible types in assignment (expression has type "B", variable has type "A")
g = h  # E: Incompatible types in assignment (expression has type "B", variable has type "A")
h = f  # E: Incompatible types in assignment (expression has type "A", variable has type "B")
h = g  # E: Incompatible types in assignment (expression has type "A", variable has type "B")
f = g
f = h
f = f
g = g
h = h

class A: pass
class B(A): pass

[case testFunctionTypeCompatibilityWithOtherTypes]
from typing import Undefined, Function
f = Undefined # type: Function[[], None]
a, o = Undefined, Undefined # type: (A, object)
a = f   # E: Incompatible types in assignment (expression has type , variable has type "A")
f = a   # E: Incompatible types in assignment (expression has type "A", variable has type )
f = o   # E: Incompatible types in assignment (expression has type "object", variable has type )
f = f() # E: Function does not return a value

f = f
f = None
o = f

class A: pass

[case testFunctionSubtypingWithVoid]
from typing import Undefined, Function
f = Undefined # type: Function[[], None]
g = Undefined # type: Function[[], object]
f = g  # E: Incompatible types in assignment (expression has type , variable has type )
g = f  # E: Incompatible types in assignment (expression has type , variable has type )

f = f
g = g

[case testFunctionSubtypingWithMultipleArgs]
from typing import Undefined, Function
f = Undefined # type: Function[[A, A], None]
g = Undefined # type: Function[[A, B], None]
h = Undefined # type: Function[[B, B], None]
f = g  # E: Incompatible types in assignment (expression has type , variable has type )
f = h  # E: Incompatible types in assignment (expression has type , variable has type )
g = h  # E: Incompatible types in assignment (expression has type , variable has type )
g = f
h = f
h = g
f = f
g = g
h = h

class A: pass
class B(A): pass

[case testFunctionTypesWithDifferentArgumentCounts]
from typing import Undefined, Function
f = Undefined # type: Function[[], None]
g = Undefined # type: Function[[A], None]
h = Undefined # type: Function[[A, A], None]

f = g   # E: Incompatible types in assignment (expression has type , variable has type )
f = h   # E: Incompatible types in assignment (expression has type , variable has type )
h = f   # E: Incompatible types in assignment (expression has type , variable has type )
h = g   # E: Incompatible types in assignment (expression has type , variable has type )

f = f
g = g
h = h

class A: pass
[out]

[case testCompatibilityOfSimpleTypeObjectWithStdType]
from typing import Undefined
t = Undefined # type: type
a = Undefined # type: A

a = A # E: Incompatible types in assignment (expression has type , variable has type "A")
t = f # E: Incompatible types in assignment (expression has type , variable has type "type")
t = A

class A:
    def __init__(self, a: 'A') -> None: pass

def f() -> None: pass

[case testFunctionTypesWithOverloads]
from typing import Undefined, Function, overload, disjointclass
f = Undefined # type: Function[[AA], A]
g = Undefined # type: Function[[B], B]
h = Undefined # type: Function[[A], AA]

h = i  # E: Incompatible types in assignment (expression has type , variable has type )
f = j

f = i
g = i
g = j

class A: pass
class AA(A): pass

@disjointclass(A)
class B: pass

@overload
def i(x: AA) -> A:
    pass
@overload
def i(x: B) -> B:
    pass

@overload
def j(x: B) -> B:
    pass
@overload
def j(x: A) -> AA:
    pass

[case testOverloadWithThreeItems]
from typing import Undefined, Function, overload, disjointclass
g1 = Undefined # type: Function[[A], A]
g2 = Undefined # type: Function[[B], B]
g3 = Undefined # type: Function[[C], C]
g4 = Undefined # type: Function[[A], B]
a, b, c = Undefined, Undefined, Undefined # type: (A, B, C)

b = f(a)  # E: Incompatible types in assignment (expression has type "A", variable has type "B")
a = f(b)  # E: Incompatible types in assignment (expression has type "B", variable has type "A")
b = f(c)  # E: Incompatible types in assignment (expression has type "C", variable has type "B")
g4 = f    # E: Incompatible types in assignment (expression has type , variable has type )

g1 = f
g2 = f
g3 = f
a = f(a)
b = f(b)
c = f(c)

class A: pass

@disjointclass(A)
class B: pass

@disjointclass(A)
@disjointclass(B)
class C: pass

@overload
def f(x: A) -> A: pass
@overload
def f(x: B) -> B: pass
@overload
def f(x: C) -> C: pass


-- Default argument values
-- -----------------------


[case testCallingFunctionsWithDefaultArgumentValues]
from typing import Undefined
a, b = Undefined, Undefined # type: (A, B)
a = f()     # E: Incompatible types in assignment (expression has type "B", variable has type "A")
b = f(b)    # E: Argument 1 to "f" has incompatible type "B"; expected "A"
b = f(a, a) # E: Too many arguments for "f"

b = f()
b = f(a)
b = f(AA())

def f(x: 'A'  =  None) -> 'B': pass

class A: pass
class AA(A): pass
class B: pass

[case testDefaultArgumentExpressions]
import typing
def f(x: 'A' = A()) -> None:
    b = x # type: B # E: Incompatible types in assignment (expression has type "A", variable has type "B")
    a = x # type: A

class B: pass
class A: pass
[out]
main: In function "f":

[case testDefaultArgumentExpressions2]
import typing
def f(x: 'A' = B()) -> None: # E: Incompatible types in assignment (expression has type "B", variable has type "A")
    b = x # type: B      # E: Incompatible types in assignment (expression has type "A", variable has type "B")
    a = x # type: A

class B: pass
class A: pass
[out]
main: In function "f":

[case testDefaultArgumentsWithSubtypes]
import typing
def f(x: 'B' = A()) -> None: # E: Incompatible types in assignment (expression has type "A", variable has type "B")
    pass
def g(x: 'A' = B()) -> None:
    pass

class A: pass
class B(A): pass
[out]
main: In function "f":

[case testMultipleDefaultArgumentExpressions]
import typing
def f(x: 'A' = B(), y: 'B' = B()) -> None: # E: Incompatible types in assignment (expression has type "B", variable has type "A")
    pass
def h(x: 'A' = A(), y: 'B' = B()) -> None:
    pass

class A: pass
class B: pass
[out]
main: In function "f":

[case testMultipleDefaultArgumentExpressions2]
import typing
def g(x: 'A' = A(), y: 'B' = A()) -> None: # E: Incompatible types in assignment (expression has type "A", variable has type "B")
    pass

class A: pass
class B: pass
[out]
main: In function "g":

[case testDefaultArgumentsAndSignatureAsComment]
import typing
def f(x = 1): # type: (int) -> str
    pass
f()
f(1)
f('') # E: Argument 1 to "f" has incompatible type "str"; expected "int"

[case testMethodDefaultArgumentsAndSignatureAsComment]
import typing
class A:
    def f(self, x = 1): # type: (int) -> str
        pass
A().f()
A().f(1)
A().f('') # E: Argument 1 to "f" of "A" has incompatible type "str"; expected "int"


-- Access to method defined as a data attribute
-- --------------------------------------------


[case testMethodAsDataAttribute]
from typing import Undefined, Any, Function
class B: pass
x = Undefined # type: Any
class A:
    f = x # type: Function[[A], None]
    g = x # type: Function[[A, B], None]
a = Undefined # type: A
a.f()
a.g(B())
a.f(a) # E: Too many arguments
a.g()  # E: Too few arguments

[case testMethodWithInvalidMethodAsDataAttribute]
from typing import Undefined, Any, Function
class B: pass
x = Undefined # type: Any
class A:
    f = x # type: Function[[], None]
    g = x # type: Function[[B], None]
a = Undefined # type: A
a.f() # E: Invalid method type
a.g() # E: Invalid method type

[case testMethodWithDynamicallyTypedMethodAsDataAttribute]
from typing import Undefined, Any, Function
class B: pass
x = Undefined # type: Any
class A:
    f = x # type: Function[[Any], Any]
a = Undefined # type: A
a.f()
a.f(a) # E: Too many arguments

[case testOverloadedMethodAsDataAttribute]
from typing import overload, Undefined
class B: pass
class A:
    @overload
    def f(self) -> None: pass
    @overload
    def f(self, b: B) -> None: pass
    g = f
a = Undefined # type: A
a.g()
a.g(B())
a.g(a) # E: No overload variant matches argument types

[case testMethodAsDataAttributeInferredFromDynamicallyTypedMethod]
from typing import Undefined
class A:
    def f(self, x): pass
    g = f
a = Undefined # type: A
a.g(object())
a.g(a, a) # E: Too many arguments
a.g()     # E: Too few arguments

[case testMethodAsDataAttributeInGenericClass]
from typing import typevar, Generic, Undefined
t = typevar('t')
class B: pass
class A(Generic[t]):
    def f(self, x: t) -> None: pass
    g = f
a = Undefined # type: A[B]
a.g(B())
a.g(a)   # E: Argument 1 has incompatible type A[B]; expected "B"

[case testInvalidMethodAsDataAttributeInGenericClass]
from typing import Undefined, Any, typevar, Generic, Function
t = typevar('t')
class B: pass
class C: pass
x = Undefined # type: Any
class A(Generic[t]):
    f = x # type: Function[[A[B]], None]
ab = Undefined # type: A[B]
ac = Undefined # type: A[C]
ab.f()
ac.f()   # E: Invalid method type

[case testPartiallyTypedSelfInMethodDataAttribute]
from typing import Undefined, Any, typevar, Generic, Function
t = typevar('t')
class B: pass
class C: pass
x = Undefined # type: Any
class A(Generic[t]):
    f = x # type: Function[[A], None]
ab = Undefined # type: A[B]
ac = Undefined # type: A[C]
ab.f()
ac.f()

[case testCallableDataAttribute]
from typing import Undefined, Function
class A:
    g = Undefined # type: Function[[A], None]
    def __init__(self, f: Function[[], None]) -> None:
        self.f = f
a = A(None)
a.f()
a.g()
a.f(a) # E: Too many arguments
a.g(a) # E: Too many arguments


-- Nested functions
-- ----------------


[case testSimpleNestedFunction]
import typing
def f(a: 'A') -> None:
    def g(b: 'B') -> None:
         b = a # fail
         aa = a # type: A # ok
         b = B()
    g(a) # fail
    g(B())
class A: pass
class B: pass
[out]
main: In function "g":
main, line 4: Incompatible types in assignment (expression has type "A", variable has type "B")
main: In function "f":
main, line 7: Argument 1 to "g" has incompatible type "A"; expected "B"

[case testReturnAndNestedFunction]
import typing
def f() -> 'A':
    def g() -> 'B':
        return A() # fail
        return B()
    return B() # fail
    return A()
class A: pass
class B: pass
[out]
main: In function "g":
main, line 4: Incompatible return value type: expected __main__.B, got __main__.A
main: In function "f":
main, line 6: Incompatible return value type: expected __main__.A, got __main__.B

[case testDynamicallyTypedNestedFunction]
import typing
def f(x: object) -> None:
    def g(y):
        pass
    g() # E: Too few arguments for "g"
    g(x)
[out]
main: In function "f":

[case testNestedFunctionInMethod]
import typing
class A:
    def f(self) -> None:
        def g(x: int) -> None:
            y = x # type: int
            a = x # type: A # fail
        g(2)
        g(A()) # fail
[out]
main: In function "g":
main, line 6: Incompatible types in assignment (expression has type "int", variable has type "A")
main: In member "f" of class "A":
main, line 8: Argument 1 to "g" of "A" has incompatible type "A"; expected "int"


-- Casts
-- -----


[case testCastsToAndFromFunctionTypes]
from typing import typevar, Function, Any, cast
t = typevar('t')
def f(x: t,
      f1: Function[[], None],
      f2: Function[[Any], None], o: object) -> None:
    x = cast(t, f1)
    f1 = cast(Function[[], None], x)
    f1 = cast(Function[[], None], f2)
    f1 = cast(Function[[], None], o)


-- Function decorators
-- -------------------


[case testTrivialStaticallyTypedFunctionDecorator]
from typing import typevar
t = typevar('t')
def dec(f: t) -> t:
    return f
@dec
def f(x: int) -> None: pass
f(1)
f('x') # E: Argument 1 to "f" has incompatible type "str"; expected "int"

[case testTrivialStaticallyTypedMethodDecorator]
from typing import typevar
t = typevar('t')
def dec(f: t) -> t:
    return f
class A:
    @dec
    def f(self, x: int) -> None: pass
A().f(1)
A().f('') # E: Argument 1 to "f" of "A" has incompatible type "str"; expected "int"
class B: pass

[case testTrivialDecoratedNestedFunction]
from typing import typevar
t = typevar('t')
def dec(f: t) -> t:
    return f
def g() -> None:
    @dec
    def f(x: int) -> None: pass
    f(1)
    f('') # E: Argument 1 to "f" has incompatible type "str"; expected "int"
[out]
main: In function "g":

[case testCheckingDecoratedFunction]
import typing
def dec(f): pass
@dec
def f(x: 'A') -> None:
    a = x # type: A
    x = object() # E: Incompatible types in assignment (expression has type "object", variable has type "A")
class A: pass
[out]
main: In function "f":

[case testDecoratorThatSwitchesType]
from typing import Function
def dec(x) -> Function[[], None]: pass
@dec
def f(y): pass
f()
f(None) # E: Too many arguments for "f"

[case testDecoratorThatSwitchesTypeWithMethod]
from typing import Any, Function, Undefined
def dec(x) -> Function[[Any], None]: pass
class A:
    @dec
    def f(self, a, b, c): pass
a = Undefined # type: A
a.f()
a.f(None) # E: Too many arguments for "f" of "A"

[case testNestedDecorators]
from typing import Any, Function
def dec1(f: Function[[Any], None]) -> Function[[], None]: pass
def dec2(f: Function[[Any, Any], None]) -> Function[[Any], None]: pass
@dec1
@dec2
def f(x, y): pass
f()
f(None) # E: Too many arguments for "f"

[case testInvalidDecorator1]
from typing import Any, Function
def dec1(f: Function[[Any], None]) -> Function[[], None]: pass
def dec2(f: Function[[Any, Any], None]) -> Function[[Any], None]: pass
@dec1 # E: Argument 1 to "dec2" has incompatible type Function[["Any"] -> "Any"]; expected Function[["Any", "Any"] -> None]
@dec2
def f(x): pass

[case testInvalidDecorator2]
from typing import Any, Function
def dec1(f: Function[[Any, Any], None]) -> Function[[], None]: pass
def dec2(f: Function[[Any, Any], None]) -> Function[[Any], None]: pass
@dec1 # E: Argument 1 to "dec1" has incompatible type Function[["Any"] -> None]; expected Function[["Any", "Any"] -> None]
@dec2
def f(x, y): pass


-- Conditional function definition
-- -------------------------------


[case testTypeCheckBodyOfConditionalFunction]
from typing import Undefined, Any
x = Undefined # type: Any
if x:
    def f(x: int) -> None:
        x = 1
        x = '' # E: Incompatible types in assignment (expression has type "str", variable has type "int")
[out]
main: In function "f":

[case testCallConditionalFunction]
from typing import Undefined, Any
x = Undefined # type: Any
if x:
    def f(x: int) -> None:  pass
    f(1)
    f('x') # E: Argument 1 to "f" has incompatible type "str"; expected "int"
f(1)
f('x') # E: Argument 1 to "f" has incompatible type "str"; expected "int"

[case testConditionalFunctionDefinitionWithIfElse]
from typing import Undefined, Any
x = Undefined # type: Any
if x:
    def f(x: int) -> None:
        x = 'x'   # fail
        x = 1
else:
    def f(x: int) -> None:
        x + 'x'   # fail
        x = 1
f(1)
f('x') # fail
[out]
main: In function "f":
main, line 5: Incompatible types in assignment (expression has type "str", variable has type "int")
main, line 9: Unsupported left operand type for + ("int")
main: At top level:
main, line 12: Argument 1 to "f" has incompatible type "str"; expected "int"

[case testUnconditionalRedefinitionOfConditionalFunction]
from typing import Undefined, Any
x = Undefined # type: Any
if x:
    def f(): pass
def f(): pass # E: Name 'f' already defined (overload variants must be next to each other)

[case testIncompatibleConditionalFunctionDefinition]
from typing import Undefined, Any
x = Undefined # type: Any
if x:
    def f(x: int) -> None: pass
else:
    def f(x): pass # E: All conditional function variants must have identical signatures

[case testIncompatibleConditionalFunctionDefinition2]
from typing import Undefined, Any
x = Undefined # type: Any
if x:
    def f(x: int) -> None: pass
else:
    def f(y: int) -> None: pass # E: All conditional function variants must have identical signatures

[case testIncompatibleConditionalFunctionDefinition3]
from typing import Undefined, Any
x = Undefined # type: Any
if x:
    def f(x: int) -> None: pass
else:
    def f(x: int = 0) -> None: pass # E: All conditional function variants must have identical signatures


-- Conditional method definition
-- -----------------------------


[case testTypeCheckBodyOfConditionalMethod]
from typing import Undefined, Any
x = Undefined # type: Any
class A:
    if x:
        def f(self, x: int) -> None:
            x = 1
            x = '' # E: Incompatible types in assignment (expression has type "str", variable has type "int")
[out]
main: In member "f" of class "A":

[case testCallConditionalMethodInClassBody]
from typing import Undefined, Any
x = Undefined # type: Any
class A:
    if x:
        def f(self, x: int) -> None:  pass
        f(x, 1)
        f(x, 'x') # E: Argument 2 to "f" of "A" has incompatible type "str"; expected "int"
    f(x, 1)
    f(x, 'x') # E: Argument 2 to "f" of "A" has incompatible type "str"; expected "int"
[out]
main: In class "A":

[case testCallConditionalMethodViaInstance]
from typing import Undefined, Any
x = Undefined # type: Any
class A:
    if x:
         def f(self, x: int) -> None: pass
A().f(1)
A().f('x') # E: Argument 1 to "f" of "A" has incompatible type "str"; expected "int"

[case testConditionalMethodDefinitionWithIfElse]
from typing import Undefined, Any
x = Undefined # type: Any
class A:
    if x:
        def f(self, x: int) -> None:
            x = 'x'   # fail
            x = 1
    else:
        def f(self, x: int) -> None:
            x + 'x'   # fail
            x = 1
A().f(1)
A().f('x') # fail
[out]
main: In member "f" of class "A":
main, line 6: Incompatible types in assignment (expression has type "str", variable has type "int")
main, line 10: Unsupported left operand type for + ("int")
main: At top level:
main, line 13: Argument 1 to "f" of "A" has incompatible type "str"; expected "int"

[case testUnconditionalRedefinitionOfConditionalMethod]
from typing import Undefined, Any
x = Undefined # type: Any
class A:
    if x:
        def f(self): pass
    def f(self): pass # E: Name 'f' already defined

[case testIncompatibleConditionalMethodDefinition]
from typing import Undefined, Any
x = Undefined # type: Any
class A:
    if x:
        def f(self, x: int) -> None: pass
    else:
        def f(self, x): pass # E: All conditional function variants must have identical signatures
[out]
main: In class "A":

[case testConditionalFunctionDefinitionInTry]
import typing
try:
    def f(x: int) -> None: pass
except:
    def g(x: str) -> None: pass
f(1)
f('x') # E: Argument 1 to "f" has incompatible type "str"; expected "int"
g('x')
g(1) # E: Argument 1 to "g" has incompatible type "int"; expected "str"
